# cpp-scheduler

./: CMakeLists.txt  README.md
scheduler/: functional.hpp  scheduler.cc  scheduler.hpp  task.hpp
tests/: CMakeLists.txt  tests.cc
